welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:6: error: ')' expected but 'if' found.
  if (estSurBiscuit){
  ^DwarfCode:10: error: ';' expected but 'while' found.
  while (!estSurBiscuit()){
  ^