welcome.lessons.welcome.summative.Moria.scala.code
retourne()
while(!estFaceMur()){
  while (estSurBiscuit()==false && estFaceMur==false{
    avance()
  }
  if (estSurBiscuit){
    prendBiscuit()
    retourne()
  }
  while (!estSurBiscuit()){
    avance()
  }
  recule()
  poseBiscuit()
  recule()
  retourne()
}

retourne()
droite()
avance()
gauche()
avance()